Fix player card alignment and left-align game rules text

--- a/src/components/ModernUI.css
+++ b/src/components/ModernUI.css
@@ -159,6 +159,8 @@
   display: flex;
   flex-direction: column;
   min-height: 120px;
+  justify-content: center;
+  align-items: center;
 }
 
 .player-card.active {
@@ -180,6 +182,7 @@
   font-weight: 600;
   margin: 0 0 5px 0;
   text-align: center;
+  width: 100%;
 }
 
 .player-1 .player-name {
@@ -201,6 +204,7 @@
   font-weight: 700;
   margin: 5px 0;
   text-align: center;
+  width: 100%;
 }
 
 .stone-indicators {
@@ -211,6 +215,7 @@
   justify-content: center;
   align-items: center;
   min-height: 20px;
+  width: 100%;
 }
 
 .stone-indicator {
@@ -308,6 +313,7 @@
   line-height: 1.4;
   color: rgba(255, 255, 255, 0.9);
   font-size: 15px;
+  text-align: left;
 }
 
 .rules-list li:last-child {
